src/test/ui/consts/qualif_overwrite.stderr
error[E0492]: constants cannot refer to interior mutable data
  --> $DIR/qualif_overwrite.rs:10:5
   |
LL |     &{a}
   |     ^^^^ this borrow of an interior mutable value may end up in the final value

error: aborting due to previous error

For more information about this error, try `rustc --explain E0492`.
